Ny design på grenar sidan och validering av css + html'

--- a/grenar.html
+++ b/grenar.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
-<html>
-<head lang="sv">
+<html lang="sv">
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Grenar</title>
@@ -9,17 +9,40 @@
 <body class="grid" >
 		<nav>
 			<ul>
-				<li class="rankingMeny"><a href="Ranking.html">Ranking</a></li>
-				<li class="indexMeny"><a href="index.html">Index</a></li>
-				<li id="grenarMeny"><a href="grenar.html">Grenar</a></li>
+				<li><a href="Ranking.html">Ranking</a></li>
+				<li><a href="index.html">Index</a></li>
+				<li><a href="grenar.html">Grenar</a></li>
 			</ul>   
 		</nav>
 
-		<div>
-			<div class="titel"> <h1>Titel</h1> </div>
-			<div class="bild">Bild</div>
+		
+			<div class="titel"> <h1>Dynamiskt Skytte/IPSC</h1> </div>
+			<div class="ht">
+				<ul>
+					<li><a href="#">Nästa gren</a></li>
+					<li><a href="#">Föregående gren</a></li>
+				</ul>
+			</div>
+
+			<div class="bild"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQr2xZmRPRClx5vSGQJuLwSyQyV9OoS9Ol2B97vLtAACoD_6TiO&usqp=CAU" alt="Dynamiskt skytte"></div>
 			<div class="text">text</div>
+			<div class="hm">
+				<table>
+					<caption></caption>
+					<tr>
+						<th>Namn på Föreningen:</th>
+						<th>Ort:</th>
+					</tr>
+				</table>
+			
+			
+			</div>
+			<div class="vm"> 
+				<h2>Fakta om IPSC</h2>
+				<p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu.
+				Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos</p>
+			</div>
 			<div class="footer">footer</div>
-		</div>
+		
 </body>
 </html>
