--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <!--Starttagg för HTML dokument-->
-<html>
+<html lang="sv">
 <!--Starttagg för "gömd informtation" för sidan samt vilket språk som används-->
-<head lang="sv">
+<head>
     <!--Deklarerar att denna sorts teckenkodning används-->
     <meta charset="utf-8">
     <!--Anpassar Sidan efter vilken källa som öppnar den-->
