Första för granskning

--- a/grenar.html
+++ b/grenar.html
@@ -17,16 +17,19 @@
 
 		
 			<div class="titel"> <h1>Dynamiskt Skytte/IPSC</h1> </div>
+			<!--Lokal meny-->
 			<div class="ht">
 				<ul>
 					<li><a href="#">Nästa gren</a></li>
 					<li><a href="#">Föregående gren</a></li>
 				</ul>
 			</div>
+			<!--Iframe för att spela ett youtubeklipp-->
+			<iframe src="https://www.youtube.com/embed/JsKYUcf9Nhg" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-			<div class="bild"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQr2xZmRPRClx5vSGQJuLwSyQyV9OoS9Ol2B97vLtAACoD_6TiO&usqp=CAU" alt="Dynamiskt skytte"></div>
 			<div class="text">text</div>
 			<div class="hm">
+			<!--Tabell med olika föreningar m.m-->
 				<table>
 					<caption></caption>
 					<tr>
@@ -38,6 +41,7 @@
 			
 			</div>
 			<div class="vm"> 
+					<!--Undertitel-->
 				<h2>Fakta om IPSC</h2>
 				<p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu.
 				Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos</p>
