--- a/index.html
+++ b/index.html
@@ -13,13 +13,62 @@
     <link href="layout.css" rel="stylesheet">
     <!--Sluttagg för "head" dokument-->
 </head>
-<body>
+<body class="grid">
     <!--Global Meny-->
-    <ul class="topMeny">
-        <li id="rankingMeny"><a href="ranking.html"a>Ranking</a></li>
-        <li id="indexMeny"><a href="index.html">Hem</a></li>
-        <li id="grenarMeny"><a href="grenar.html">Grenar</a></li>
-    </ul>
+    <nav>
+       <ul>
+             <li class="rankingMeny"><a href="Ranking.html">Ranking</a></li>
+             <li class="indexMeny"><a href="index.html">Index</a></li>
+             <li id="grenarMeny"><a href="grenar.html">Grenar</a></li>
+        </ul>
+
+     </nav>
+     <!--Titel för sidan-->
+	 <div class="titel"><h1>Pistolskytte</h1></div>
+
+	<!--Bilden i sidan-->
+	<div class="bild"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSAwy8-fSJprwi4zZ6RVgO3AVZvqMoxTzRyAlAw00-SF3TQOoUZ&usqp=CAU" alt="Pistolskytt"> </div>
+	<!--Kod till Form-->
+	<div class="vm">
+		<form action="blank" method="POST">
+		<!--Skapar en ruta för "content" som hänger ihop i formen-->
+			<fieldset>
+			<!--Som caption för form-->
+				<legend> Intresseanmälan </legend>
+				<!--Inputruta med label och en placeholder så att användaren vet vad som förväntas-->
+				<label for="fnamn">Förnamn:</label>
+				<input type="text" id="fnamn" name="Förnamn" placeholder="Förnamn"> 
+				<br><br>
+
+				<label for="enamn">Efternamn:</label>
+				<input type="text" id="enamn" name="Efternamn" placeholder="Efternamn">
+				<br><br>
+
+				<label for="fdatum">Födelsedatum:</label>
+				<input type="date" id="fdatum" name="Födelsedatum">
+				<br><br>	
+				
+				<label for="grenar">Välj en Gren utav intresse:</label>
+				<input list="grenVal" id="grenar" name="grenar">
+				<!--Lista med grenar att välja emellan-->
+				<datalist id="grenVal">
+					<option value="Dynamiskt Skytte">
+					<option value="Sportskytte">
+					<option value="Luftpistol">
+				</datalist>
+
+				<!--Sumbit knapp-->
+				<input type="submit" value="Submit">
+
+
+			</fieldset>
+		</form>
+	</div>
+	<!--generisk footer med en kula som rör sig till andra sidan vid hover-->
+	<div class="footer">
+		<img src="https://pngimg.com/uploads/bullets/bullets_PNG35579.png" alt="9mm kula">
+	</div>
+
 </body>
 
 </html>
